--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,13 @@ databases:
   - name: mysite
     databaseName: mysite
     user: mysite
+    plan: free
 
 services:
   - type: web
     name: mysite
     runtime: python
+    plan: free
     buildCommand: "./build.sh"
     startCommand: "gunicorn mysite.wsgi:application"
     envVars:
